--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -15,5 +14,6 @@
     "astro": "^4.16.8",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
-  }
+  },
+  "packageManager": "yarn@4.5.1"
 }
