--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.8",
+    "cntl": "^1.0.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   },
