--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
-    "astro": "^4.16.8",
+    "astro": "4.16.15",
     "cntl": "^1.0.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
