--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/tailwind": "^5.1.2",
-    "astro": "4.16.15",
+    "@astrojs/tailwind": "6.0.0",
+    "astro": "5.2.5",
     "cntl": "^1.0.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
