--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/partytown": "^2.1.4",
     "@astrojs/tailwind": "6.0.0",
     "astro": "5.2.5",
     "cntl": "^1.0.0",
