--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
+    "@astrojs/check": "0.9.5",
     "@astrojs/partytown": "^2.1.4",
+    "@astrojs/svelte": "^7.2.0",
     "@astrojs/tailwind": "6.0.2",
-    "astro": "5.14.1",
+    "astro": "5.15.1",
     "cntl": "^1.0.0",
+    "svelte": "^5.42.1",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "typescript": "^5.9.3"
   },
-  "packageManager": "yarn@4.5.1",
+  "packageManager": "yarn@4.10.3",
   "devDependencies": {
     "daisyui": "^4.12.14"
   }
