--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.9.5",
+    "@astrojs/check": "0.9.6",
     "@astrojs/partytown": "^2.1.4",
-    "@astrojs/svelte": "^7.2.0",
+    "@astrojs/svelte": "7.2.3",
     "@astrojs/tailwind": "6.0.2",
-    "astro": "5.15.1",
+    "astro": "5.16.5",
     "cntl": "^1.0.0",
     "svelte": "^5.42.1",
     "tailwindcss": "^3.4.14",
@@ -21,6 +21,8 @@
   },
   "packageManager": "yarn@4.10.3",
   "devDependencies": {
+    "@types/react": "^19.2.7",
+    "baseline-browser-mapping": "^2.9.7",
     "daisyui": "^4.12.14"
   }
 }
